🩹 Fix jump up button placement

--- a/assets/css/core/zmedia.css
+++ b/assets/css/core/zmedia.css
@@ -38,11 +38,11 @@
 } */
 
 /* footer */
-@media screen and (max-width: 900px) {
+/* @media screen and (max-width: 900px) {
     .list .top-link {
         transform: translateY(-5rem);
     }
-}
+} */
 
 @media (prefers-reduced-motion) {
     /* terms; profile-mode; post-single; post-entry; post-entry; search; search */
